--- a/styles/margot-base/components/forms.css
+++ b/styles/margot-base/components/forms.css
@@ -343,7 +343,7 @@ input[type="file"] ~ output {
 
 input[type="file"] ~ output img {
   border-radius: 3px;
-  height: 150px;
+  max-height: 150px;
   margin-top: 10px;
 }
 
